# google-workspace

./: .gitignore  pyproject.toml
google_workspace/: __init__.py  auth.py  calendar.py  docs.py  drive.py  gmail.py  setup_auth.py  sheets.py  tasks.py
